--- a/client/src/components/home/UserProfile.css
+++ b/client/src/components/home/UserProfile.css
@@ -13,7 +13,7 @@
   margin-bottom: 20px;
   cursor: pointer;
   overflow: hidden;
-  border: 2px solid #051C9B; /* Navy blue border */
+  border: 2px solid #051C9B; 
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
   transition: all 0.3s ease;
 }
